@@ -1,3 +1,4 @@
+(r4361) Enable scrolling the items lists in the editor with the mouse wheel.
 (r4360) Enable scrolling the terrain and building graphics lists in the editor with the mouse wheel.
 (r4359) Fix a vanilla buffer underrun, which occurs when displaying a multiline text containing a word longer than the maximum line width.  The most prominent example is the item view in the map editor with the German data files ("Leichte Panzerabwehrwaffe").
 (r4357) Make the map editor available via the command line parameter -editor.
